<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.SchoolApplication"
    tools:context=".activity.ActivityQuizQuestions">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblQuestion"
        style="@style/TextAppearanceHeading1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="How old are you?"
        app:layout_constraintBottom_toTopOf="@+id/linearProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_imagePreview" />

    <LinearLayout
        android:id="@+id/linearProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/linearOptions">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1.7"
            android:max="10"
            android:progress="3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblProgressIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/lblProgressHolder" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".9">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOption1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_options_default"
            android:gravity="center"
            android:text="@string/btnTextPlaceHolder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOption2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_options_default"
            android:gravity="center"
            android:text="@string/btnTextPlaceHolder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOption3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_options_default"
            android:gravity="center"
            android:text="@string/btnTextPlaceHolder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnOption4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_options_default"
            android:gravity="center"
            android:text="@string/btnTextPlaceHolder" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckAnswer"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearOptions"
        app:layout_constraintStart_toStartOf="@+id/linearOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>